--- a/Rawr-test/Card/CardCell.xib
+++ b/Rawr-test/Card/CardCell.xib
@@ -20,6 +20,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0aD-WB-gDj">
                         <rect key="frame" x="0.0" y="0.0" width="106.66666666666667" height="74"/>
+                        <color key="backgroundColor" red="0.3921568627" green="0.40784313729999999" blue="0.43137254899999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="74" id="kLu-Uz-Y6c"/>
                         </constraints>
